--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -153,7 +153,7 @@
 }
 
 .container6.animate-line::after {
-  animation: moveline 4s linear forwards; /* Trigger animation when class is added */
+  animation: moveline 2s linear forwards; /* Trigger animation when class is added */
 }
 
 
@@ -231,13 +231,62 @@
   flex-direction: column;
   background: white;
 }
-
-.comp7{
+.comp7 {
   width: 100%;
   min-height: 100vh;
   max-height: max-content;
   margin: 0px;
   color: white;
+  background-color: black;
+  background-image: url("../Media/Forest.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  /* Remove z-index here */
+}
+
+.comp7::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Dark overlay with 50% opacity */
+  z-index: 1; /* Overlay goes above the background */
+}
+
+.allStack {
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  width: 100%;
+  flex-wrap: wrap;
+  position: relative;
+  padding-left: 30px;
+  padding-right: 30px;
+  z-index: 2; /* Ensure content is above the overlay */
+}
+
+.stack {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1%;
+  font-size: 30px;
+}
+
+.stackIcon {
+  font-size: 64px;
+}
+
+.stackIcon:hover {
+  transform: scale(1.2);
 }
 
 .comp6{
@@ -258,6 +307,9 @@
   padding: 40px;
   font-size: 50px;
   text-align: center;
+  position: relative;
+  z-index: 3; /* Ensure content is above the overlay */
+
 }
 /* Button Styles */
 .btn:hover {
