--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -223,7 +223,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-    z-index: -1;
+  z-index: -1;
 }
 .WhiteColor{
   color: white;
@@ -407,5 +407,255 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+
+/* Responsive */
+
+/* Large devices (900 - 1130) */
+@media only screen and (min-width: 900px) and (max-width: 1130px) {
+  .title {
+    font-size: 60px;
+  }
+
+  .typing {
+    font-size: 45px;
+  }
+
+  .About{
+    font-size: 40px;
+  }
+
+  .About p{
+    font-size: 18px;
+    line-height: 25px;
+  }
+
+  .ExperienceHeader{
+    font-size: 40px;
+  }
+
+  .experience {
+    padding: 20px 20px;
+  }
+
+  .LogoTitle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .placeholder-img {
+    width: 40px;
+    height: 40px;
+    font-size: 10px;
+  }
+
+  .stack {
+    font-size: 25px;
+  }
+
+  .stackIcon {
+    font-size: 50px;
+  }
+
+  .TechStackHeader{
+    font-size: 40px;
+  }
+
+  .btn-white {
+    padding: 10px 20px;
+  }
+}
+
+/* Medium devices (700 - 900) */
+@media only screen and (min-width: 700px) and (max-width: 900px) {
+  .content{
+    align-items: center;
+    text-align: center;
+    padding-right: 0%;
+    margin-top: 10%;
+  }
+
+  .left{
+    left: 10%;
+  }
+
+  .right{
+      left: 15%;
+  }
+  .contianer6{
+    margin: 50px auto;
+  }
+  .container6::after{
+    left: 10%
+  }
+  .container7{
+    width: 80%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-bottom: 20px;
+  }
+  
+  .title {
+    font-size: 50px;
+  }
+
+  .typing {
+    font-size: 35px;
+  }
+
+  .About{
+    font-size: 40px;
+  }
+
+  .About p{
+    font-size: 16px;
+    line-height: 23px;
+  }
+
+  .comp2{
+    border-radius: 20px;
+  }
+
+  .ExperienceHeader{
+    font-size: 30px;
+  }
+
+  .experience {
+    padding: 20px 20px;
+  }
+
+  .LogoTitle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .placeholder-img {
+    width: 40px;
+    height: 40px;
+    font-size: 10px;
+  }
+
+  .stack {
+    font-size: 25px;
+  }
+
+  .stackIcon {
+    font-size: 50px;
+  }
+
+  .TechStackHeader{
+    font-size: 30px;
+  }
+
+  .btn-white {
+    padding: 10px 20px;
+  }
+}
+
+/* Small devices (300 - 700) */
+@media only screen and (min-width: 300px) and (max-width: 700px) {
+  .content{
+    align-items: center;
+    text-align: center;
+    padding-right: 0%;
+    margin-top: 25%;
+  }
+
+  .title {
+    font-size: 35px;
+  }
+
+  .typing {
+    font-size: 25px;
+  }
+
+  .left{
+    left: 10%;
+  }
+
+  .right{
+      left: 15%;
+  }
+  .contianer6{
+    margin: 50px auto;
+  }
+  .container6::after{
+    left: 10%
+  }
+  .container7{
+    width: 80%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-bottom: 20px;
+  }
+  
+
+  .About{
+    font-size: 40px;
+    margin: 0px 10%;
+  }
+
+  .About p{
+    font-size: 16px;
+    line-height: 23px;
+  }
+
+  .comp3
+  {
+    margin-bottom: 100px; 
+  }
+
+  .ExperienceHeader{
+    font-size: 30px;
+  }
+
+  .experience {
+    padding: 20px 20px;
+  }
+
+  .comp4{
+    background-size: contain;  /* Ensures the full image fits inside */
+  }
+  .comp2{
+    border-radius: 20px;
+  }
+  .LogoTitle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .placeholder-img {
+    width: 40px;
+    height: 40px;
+    font-size: 10px;
+  }
+
+  .stack {
+    font-size: 25px;
+  }
+
+  .stackIcon {
+    font-size: 50px;
+  }
+
+  .TechStackHeader{
+    font-size: 30px;
+  }
+
+  .btn-white {
+    padding: 10px 20px;
+  }
+
+  .comp7{
+    background-size: contain;
   }
 }
